<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhenoApp</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bonitur">BoniturActivity</string>
    <string name="title_activity_standort_info">BoniturActivity</string>

    <string name="btn_save">save</string>
    <string name="btn_save_xls">save as XLS</string>
    <string name="btn_save_csv">save as CSV</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_yes">yes</string>
    <string name="btn_no">no</string>
    <string name="label_loading_data">Loading data</string>
    <string name="label_data_will_saved">Data will be saved</string>
    <string name="url_impress">file:///android_asset/html/impress.html</string>

    <string name="_intern_name_column">name_en</string>

    <string name="ba_si_button_text">Remarks</string>
    <string name="label_location">Location</string>
    <string name="label_accession">Accession</string>
    <string name="label_passport">Variety</string>
    <string name="label_variety_breeding_strain">Genotype</string>
    <string name="label_parents">Parents</string>
    <string name="label_assortment_no">Collection no.</string>
    <string name="label_information">Information</string>
    <string name="label_descriptor">Descriptor</string>
    <string name="label_characteristic">Trait</string>
    <string name="btn_back">back</string>
    <string name="btn_next">next</string>
    <string name="btn_not_evaluate">no value</string>
    <string name="title_legal_notice">Legal notice</string>
    <string name="label_location_information">Location information</string>
    <string name="label_characteristic_features">Additional information</string>
    <string name="title_file_selection">File selection</string>
    <string name="label_available_documents">Available documents</string>
    <string name="label_started_documents">Started documents</string>
    <string name="btn_today">today</string>
    <string name="btn_select_date">select date</string>
    <string name="btn_delete">delete</string>
    <string name="btn_day_before_yesterday">day before yesterday</string>
    <string name="btn_yesterday">yesterday</string>
    <string name="btn_tomorrow">tomorrow</string>
    <string name="btn_day_after_tomorrow">day after tomorrow</string>
    <string name="title_add_bbch">add BBCH Value?</string>
    <string name="text_add_bbch_question">Do you want to add a BBCH value for today\'s date?</string>
    <string name="label_name_code">Name/Code</string>
    <string name="title_select_location">Select location</string>
    <string name="text_select_location">Several locations were found, please select a location:</string>
    <string name="title_settings">Settings</string>
    <string name="label_settings_storage_location">File location</string>
    <string name="label_settings_zig_zag_mode">Zigzag mode</string>
    <string name="label_settings_excel_date">Excel output with date</string>
    <string name="label_settings_bbch_question">BBCH question</string>
    <string name="label_settings_left_handed_people">Left-handed mode</string>
    <string name="label_settings_multiple_rating">Multiple selection</string>
    <string name="title_save_result">Save result</string>
    <string name="label_filename">Filename</string>
    <string name="title_please_wait">Please wait</string>
    <string name="text_loading_data">Loading data</string>
    
    <string name="excel_title_plot">Plot</string>
    <string name="excel_title_row">Row</string>
    <string name="excel_title_plant">Plant</string>
    <string name="excel_title_acc_name">Accession name</string>
    <string name="excel_title_acc_num">Accession no.</string>
    <string name="excel_title_var_num">Variety no.</string>
    <string name="excel_title_var_name">Variety name</string>
    <string name="excel_title_col_no">Collection no.</string>
    <string name="excel_title_mother">Mother</string>
    <string name="excel_title_father">Father</string>
    <string name="excel_title_loc_info">Location info</string>
    <string name="excel_title_char_merk">Additional info</string>
    <string name="excel_title_free_field">Information</string>
    <string name="excel_title_genotype">Genotype</string>


</resources>
