<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/activity_bonitur_top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1"
                android:layout_marginTop="5dp"
                android:id="@+id/llInfos">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:focusableInTouchMode="false"
                    android:id="@+id/llStandort"
                    android:background="#ffffff"
                    style="@style/JKI_KeyValueRow">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_location" />

                    <TextView
                        android:id="@+id/tvStandort"
                        android:layout_above="@+id/tvCode"
                        style="@style/JKI_Eigenschaft_Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="XX-XXX-XXX"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAkzession"
                    style="@style/JKI_KeyValueRow_Gross"
                    android:layout_width="fill_parent"
                    android:background="#ffdedede"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView99"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_accession" />

                    <Spinner
                        android:id="@+id/spAkzession"
                        style="@style/JKI_Spinner_Main"
                        android:layout_width="wrap_content"
                        tools:listitem="@layout/jki_simple_list_item_1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPassport"
                    style="@style/JKI_KeyValueRow_Gross"
                    android:layout_width="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_passport" />

                    <Spinner
                        android:id="@+id/spPassport"
                        style="@style/JKI_Spinner_Main"
                        android:layout_width="wrap_content"
                        tools:listitem="@layout/jki_simple_list_item_1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:id="@+id/llSorte"
                    style="@style/JKI_KeyValueRow">

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_variety_breeding_strain" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvSorteZucht"
                        style="@style/JKI_Eigenschaft_Value"
                        tools:text="Sorte 1 / Zuchstamm 1"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:id="@+id/llEltern"
                    style="@style/JKI_KeyValueRow">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_parents" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEltern"
                        style="@style/JKI_Eigenschaft_Value"
                        tools:text="Mutter / Vater"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:id="@+id/llSortiment"
                    style="@style/JKI_KeyValueRow">

                    <TextView
                        android:id="@+id/textView14"
                        style="@style/JKI_Eigenschaft_Title"
                        android:layout_alignParentTop="true"
                        android:text="@string/label_assortment_no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvSortiment"
                        style="@style/JKI_Eigenschaft_Value"
                        tools:text="0123455"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:id="@+id/llFreifeld"
                    style="@style/JKI_KeyValueRow">

                    <TextView
                        android:id="@+id/textView29"
                        style="@style/JKI_Eigenschaft_Title"
                        android:text="@string/label_information" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvFreifeld"
                        style="@style/JKI_Eigenschaft_Value"
                        tools:text="Freifeld"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:id="@+id/llEigenschaft"
                    style="@style/JKI_KeyValueRow_Gross">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/JKI_Eigenschaft_Title"
                        android:text="@string/label_descriptor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        tools:text="OIV XXX"
                        android:id="@+id/tvCode"
                        android:layout_below="@+id/textView"
                        android:visibility="gone" />

                    <Spinner
                        android:id="@+id/spMarker"
                        style="@style/JKI_Spinner_Main"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        tools:listitem="@layout/jki_simple_list_item_1" />

                    <CheckBox
                        android:id="@+id/cbMarker"
                        style="@style/JKI_KeyValueRow_Gross_elements"
                        android:layout_marginLeft="1dp"
                        android:gravity="left|center_vertical"
                        android:scaleX="1.05"
                        android:scaleY="1.15" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">

                        <Button
                            android:id="@+id/btnPrevMarker"
                            style="@style/JKI_KeyValueRow_Gross_elements"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:nestedScrollingEnabled="false"
                            android:onClick="onClick"
                            android:scaleX="1.05"
                            android:scaleY="1.15"
                            android:text="\uf060" />

                        <Button
                            android:id="@+id/btnNextMarker"
                            style="@style/JKI_KeyValueRow_Gross_elements"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:onClick="onClick"
                            android:scaleX="1.05"
                            android:scaleY="1.15"
                            android:text="\uf061" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBeschreibungKurz"
                    style="@style/JKI_KeyValueRow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/JKI_Eigenschaft_Title"
                        android:text="@string/label_characteristic" />

                    <TextView
                        android:id="@+id/tvMerkmal"
                        style="@style/JKI_Eigenschaft_Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Junger Trieb: Verteilung der Anthocyanfärbung der Wollbehaarung" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Feststellung während der Blüte. Triebspitze: Bereich oberhalb des ersten freistehenden Blattes. Die Blätter geschlossener oder halb offener Triebspitzen (OIV 001) sind zu entfalten, um Erfassungen am entsprechenden Teil der Triebspitze zu ermöglichen. Beurteilung von 10 Triebspitzen."
                    android:id="@+id/tvBeschreibung"
                    android:layout_below="@+id/tvMerkmal"
                    android:layout_marginTop="10dp"
                    android:textIsSelectable="false"
                    style="@style/JKI_Eigenschaft_Value" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ivBild"
                    android:layout_alignParentBottom="true"
                    android:focusableInTouchMode="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/rlPfadenkreuz"
                    android:layout_toEndOf="@+id/rlPfadenkreuz"
                    tools:src="@drawable/bbch_1"
                    android:layout_alignTop="@+id/rlPfadenkreuz"
                    android:layout_gravity="right"
                    android:layout_marginLeft="210dp"
                    android:onClick="onClick" />

            </LinearLayout>

            <include layout="@layout/jki_bonitur_pfadenkreuz" />

            <Button
                android:id="@+id/btnStandortInfo"
                style="@style/JKI_Button_Main_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/main_si_button_margin_top"
                android:layout_marginRight="@dimen/main_si_button_margin_right"
                android:onClick="onClick"
                android:text="@string/ba_si_button_text"
                android:textSize="@dimen/main_textsize" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ivBildGross"
                android:layout_alignBottom="@+id/llInfos"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:onClick="onClick" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:layout_marginLeft="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout">

                <Button
                    android:id="@+id/btnPrev"
                    style="@style/JKI_Button_Main_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:nestedScrollingEnabled="false"
                    android:onClick="onClick"
                    android:text="@string/btn_back" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/JKI_Button_Main_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/btn_next" />

            </LinearLayout>

            <Button
                android:id="@+id/btnNichtBewerten"
                style="@style/JKI_Button_Main_Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:onClick="onClick"
                android:text="@string/btn_not_evaluate" />

            <include layout="@layout/bon_bonwerte" />

            <include layout="@layout/bon_datum" />

            <include layout="@layout/bon_text" />

            <include layout="@layout/bon_messen" />

            <include layout="@layout/bon_bbch" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>