<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:gravity="left|center_vertical"
        android:background="@color/ripple_material_light">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/imageView"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_file_selection"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <!-- android:layout_below="@+id/textView2" -->
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/btnImpressum"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick"
                    android:text="\uf05a"
                    android:textSize="45dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnSettingList"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_toLeftOf="@+id/btnImpressum"
                    android:onClick="onClick"
                    android:text="\uf013"
                    android:textSize="45dp" />

            </RelativeLayout>

            <!--android:src="@drawable/icon" -->

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="49">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_available_documents"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/abc_primary_text_material_light" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lvDateien"
                android:layout_marginTop="30dp" />
                <!-- android:layout_below="@+id/textView3" -->
        </RelativeLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:background="#000"
            android:layout_weight="2" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="49"
            android:gravity="left"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/label_started_documents"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/abc_primary_text_material_light" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lvDateiBegonnen"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:layout_marginTop="30dp" />
            <!-- android:layout_below="@+id/textView5" -->
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>